..F....... [ZBXNEXT-2073] updated jQuery to latest 1.10.2 (Eduard)
...G...PS. [ZBXNEXT-453] added a new parameter 'User' to daemon configuration that allows dropping privileges to the specified user (Juris)
....I...S. [ZBXNEXT-581] split database upgrade patches over multiple files for easier maintenance (wiper)
A......... [ZBX-7345] removed deprecated API features (Pavels)

Bug fixes:
..F....... [ZBX-8165] fixed issue when maintenance items with its hosts/host groups removed are not accessible in configuration (Krists)
...G...PS. [ZBX-2196] changed status codes of various exit calls to library macros for consistency (Juris)
........S. [ZBX-1274] fixed negative values, received from SNMP agent, being displayed as large unsigned integers (igors)
...G...... [ZBX-8031] removed pre-processor aliases for Windows string functions; converted all references of Windows types to standard C types (Juris)
.......PS. [ZBX-7534] removed the limit of authorization string (Nikolaj)
..F....... [ZBX-8158] fixed disabled hosts not shown in trigger selection popup when in configuration (Krists)
A.F....... [ZBX-8118] changed image update so that image type can not be changed after create (Krists)
..F....... [ZBX-7553] fixed graph not getting period when coming from screen (Krists)
....I..... [ZBX-7890] fixed broken make distclean (Nikolaj)
A......... [ZBX-7981] fixed validation when renaming host to an existing template in host.massupdate; fixed validation when renaming template to an existing host in template.massupdate (Ivo)
..F....... [ZBX-7436] changed string "comment" to "description" in trigger list and trigger comments (Krists)
..F....... [ZBX-8159] fixed missing history bar when viewing or editing trigger descriptions (Krists)
A......... [ZBX-7949] fixed inherited graph and graph prototype case insensitive name comparison (Ivo)
.......PS. [ZBX-7534] removed the limit of dservice value (Nikolaj)